🐛 | Fix: Correction récupération du auth_refresh.js

--- a/app/frontend/templates/base.html
+++ b/app/frontend/templates/base.html
@@ -20,7 +20,7 @@
 
     {% include "footer.html" %}
 
-    <script src="{{ url_for('static', filename='js/auth-refresh.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/auth_refresh.js') }}"></script>
 
     <!-- Scripts spécifiques aux pages -->
     {% block scripts %}{% endblock %}
