📝 | Modif d'un commentaire

--- a/app/frontend/static/css/base.css
+++ b/app/frontend/static/css/base.css
@@ -11,4 +11,4 @@ body {
   color: #333;
 }
 
-/* Ajoute ici les styles du header, footer, navigation si tu en as */
+/* header, footer, navigation, boutons */
