--- a/app/frontend/static/css/base.css
+++ b/app/frontend/static/css/base.css
@@ -6,9 +6,50 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #fff;
   color: #333;
+  display: flex;
+  flex-direction: column; /* Empiler verticalement */
+  min-height: 100vh; /* Prend toute la hauteur de l'écran */
 }
 
-/* header, footer, navigation, boutons */
+main {
+  flex: 1;
+}
+
+/* header */
+header {
+  display: flex; /* activation flexbox */
+  justify-content: space-between; /* élèments aux extrémités */
+  align-items: center; /* centrer verticalement */
+}
+
+h1 {
+  font-size: 50px;
+}
+
+nav {
+  background-color: #B0C7B4;
+  display: flex;
+  gap: 1rem;
+  padding: 0.3rem;
+  border-radius: 35px 0 0 0;
+}
+
+nav a {
+  color: black;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 0.5rem 0.5rem;
+}
+
+/* Footer */
+footer {
+  background-color: #B0C7B4;
+  text-align: center;
+}
+
+/* Navigation */
+
+/* Boutons */
