🎨 | Modification du footer, ajout de boutique et se connecter dans le header (nav)

--- a/app/frontend/templates/header.html
+++ b/app/frontend/templates/header.html
@@ -1,9 +1,10 @@
 <header>
-    <h1>Récy&Co 🦝</h1>
+    <h1>Récy&Co</h1>
     <nav>
         <a href="{{ url_for('index') }}">Accueil</a>
         <a href="{{ url_for('jeu') }}">Jeu</a>
         <a href="{{ url_for('infos') }}">Infos tri</a>
-        <a href="{{ url_for('about') }}">À propos</a>
+        <a href="{{ url_for('shop') }}">Boutique</a>
+        <a href="{{ url_for('auth') }}">Se connecter</a>
     </nav>
 </header>
