--- a/app/frontend/templates/footer.html
+++ b/app/frontend/templates/footer.html
@@ -1,4 +1,29 @@
 <footer>
-    <p>© Récy&Co - Projet éco-conçu 🌍</p>
-    <small>Développé par Samira Roche | Holberton School Laval</small>
+    <div class="footer-content">
+        <div class="footer-column">
+            <h4>Navigation</h4>
+            <a href="/">Accueil</a>
+            <a href="/jeu">Jeu</a>
+            <a href="/infos">Infos tri</a>
+            <a href="/shop">Boutique</a>
+        </div>
+
+        <div class="footer-column">
+            <h4>Informations</h4>
+            <a href="/about">À propos</a>
+            <a href="/about#mentions-legales">Mentions légales</a>
+            <a href="/a-propos#confidentialite">Confidentialité</a>
+        </div>
+
+        <div class="footer-column">
+            <h4>Le projet</h4>
+            <a href="/about#eco-conception">Éco-conception</a>
+            <a href="/about#contact">Contact</a>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
+        <p>© 2025 Récy&Co - Projet éco-conçu 🌍</p>
+        <small>Développé par Samira Roche | Holberton School Laval</small>
+    </div>
 </footer>
