--- a/app/frontend/static/css/base.css
+++ b/app/frontend/static/css/base.css
@@ -39,9 +39,19 @@ nav {
 
 nav a {
   color: black;
-  font-weight: 600;
   text-decoration: none;
   padding: 0.5rem 0.5rem;
+}
+
+.btn-logout {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: medium;
+  color: black;
+  text-decoration: none;
+  padding: 0.5rem 0.5rem;
+  background-color: #B0C7B4;
+  border: none;
+
 }
 
 /* Footer */
@@ -70,6 +80,3 @@ footer {
 footer a {
   color: black;
 }
-/* Navigation */
-
-/* Boutons */
