--- a/app/frontend/static/css/jeu.css
+++ b/app/frontend/static/css/jeu.css
@@ -86,10 +86,9 @@
   left: 0;
   right: 0;
   text-align: center;
-  font-size: 0.75rem;
-  color: white;
+  font-size: 0.80rem;
+  color: black;
   font-weight: 700;
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
   pointer-events: none;
   z-index: 10;
 }
