--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -22,7 +22,7 @@
                 Des infos claires<br>
                 Une recherche pour savoir où jeter,<br>
                 Un jeu interactif avec notre mascotte Récy,<br>
-                Une boutique bonus pour dépenser tes bouchons !<br><br>
+                Une boutique bonus pour dépenser ton score !<br><br>
 
                 Un site simple, gratuit et pensé en éco-conception,<br>
                 pour sensibiliser petits et grands tout en s’amusant!
@@ -36,7 +36,7 @@
         </div>
 
         <div class="auth-option">
-            <p>Pas encore de compte ? Inscris-toi !</p>
+            <p>Pas encore de compte ? <br>Inscris-toi !</p>
             <a href="{{ url_for('auth') }}" class="btn-auth">Inscription</a>
         </div>
     </div>
