--- a/app/frontend/templates/jeu.html
+++ b/app/frontend/templates/jeu.html
@@ -28,7 +28,7 @@
         <div class="poubelle poubelle-jaune" data-bin="jaune">
             <div class="couvercle"></div>
             <div class="corps"></div>
-            <p class="poubelle-label">Plastique & Métal</p>
+            <p class="poubelle-label">Plastique, Métal & Carton recyclables</p>
         </div>
 
         <!--VERTE-->
@@ -52,7 +52,7 @@
 
 <!--Bouton quitter/sauvegarder-->
 <footer class="game-footer">
-    <button id="btn-quit" class="btn-secondary">Quitter/Sauvegarder</button>
+    <button id="btn-quit" class="btn-secondary">Sauvegarder</button>
 </footer>
 
 <!--SCRIPT DU JEU : vérification auth, jeu, protection-->
