--- a/app/frontend/templates/base.html
+++ b/app/frontend/templates/base.html
@@ -21,6 +21,7 @@
     {% include "footer.html" %}
 
     <script src="{{ url_for('static', filename='js/auth_refresh.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/logout.js') }}"></script>
 
     <!-- Scripts spécifiques aux pages -->
     {% block scripts %}{% endblock %}
