✨ | feat: Mise à jour des sections de la boutique vers le profil, ajout de nouvelles images et textes pour améliorer l'expérience utilisateur

--- a/app/frontend/templates/header.html
+++ b/app/frontend/templates/header.html
@@ -4,7 +4,9 @@
         <a href="{{ url_for('index') }}">Accueil</a>
         <a href="{{ url_for('jeu') }}">Jeu</a>
         <a href="{{ url_for('infos') }}">Infos tri</a>
-        <a href="{{ url_for('shop') }}">Boutique</a>
+        <a href="{{ url_for('jeter') }}">Où jeter ?</a>
+        <a href="{{ url_for('profil') }}">Profil</a>
+
 
         <!-- Lien Connexion (visible si déconnecté) -->
         <a href="/auth" id="auth-link-login" style="display: none;">Connexion</a>
