🐛 | fix: Correction de l'étiquette de la poubelle bleue pour "Papier & Journaux"

--- a/app/frontend/templates/jeu.html
+++ b/app/frontend/templates/jeu.html
@@ -39,7 +39,7 @@
         <div class="poubelle poubelle-bleue" data-bin="bleue">
             <div class="couvercle"></div>
             <div class="corps"></div>
-            <p class="poubelle-label">Papier & Carton</p>
+            <p class="poubelle-label">Papier & Journaux</p>
         </div>
 
         <!--JAUNE-->
