🐛 | fix: Correction de la section HERO dans le fichier CSS pour une meilleure clarté

--- a/app/frontend/static/css/jeu.css
+++ b/app/frontend/static/css/jeu.css
@@ -1,7 +1,6 @@
 /* ============================================
    SECTION HERO
-   ============================================
-/* SECTION HERO */
+   ============================================ */
 .hero {
     background-color: #F7F8F5;
     display: flex;
