🐛 | fix: Correction du lien vers la section Confidentialité dans le pied de page

--- a/app/frontend/templates/footer.html
+++ b/app/frontend/templates/footer.html
@@ -12,7 +12,7 @@
             <h4>Informations</h4>
             <a href="/about">À propos</a>
             <a href="/about#mentions-legales">Mentions légales</a>
-            <a href="/a-propos#confidentialite">Confidentialité</a>
+            <a href="/about#confidentialite">Confidentialité</a>
         </div>
 
         <div class="footer-column">
