🐛 | fix: Mise à jour des liens dans le menu de navigation pour corriger les sections "Infos tri" et "Où jeter ?"

--- a/app/frontend/templates/header.html
+++ b/app/frontend/templates/header.html
@@ -3,8 +3,8 @@
     <nav>
         <a href="{{ url_for('index') }}">Accueil</a>
         <a href="{{ url_for('jeu') }}">Jeu</a>
-        <a href="{{ url_for('infos') }}">Infos tri</a>
-        <a href="{{ url_for('jeter') }}">Où jeter ?</a>
+        <a href="{{ url_for('infos') }}">Les poubelles</a>
+        <a href="{{ url_for('guide') }}">Guide de tri</a>
         <a href="{{ url_for('profil') }}">Profil</a>
 
 
