🐛 | fix: Réorganisation de la section des poubelles pour une meilleure clarté et accessibilité

--- a/app/frontend/templates/infos.html
+++ b/app/frontend/templates/infos.html
@@ -23,58 +23,61 @@
     </section>
 
 
-	<!--Section poubelle-->
-	<section class="sorting-guide">
-		<div class="bin-info">
-			<!--BlEUE-->
-			<div class="poubelle poubelle-bleue" data-bin="bleue">
-				<div class="couvercle"></div>
-				<div class="corps"></div>
-				<p class="poubelle-label">Papier & Carton</p>
-			</div>
+<!--Section poubelle + détails côte à côte-->
+<section class="sorting-layout">
 
-			<!--JAUNE-->
-			<div class="poubelle poubelle-jaune" data-bin="jaune">
-				<div class="couvercle"></div>
-				<div class="corps"></div>
-				<p class="poubelle-label">Plastique, Métal & Carton recyclables</p>
-			</div>
+    <!-- GAUCHE : Les poubelles -->
+    <div class="bin-info">
+        <!--BLEUE-->
+        <div class="poubelle poubelle-bleue" data-bin="bleue">
+            <div class="couvercle"></div>
+            <div class="corps"></div>
+            <p class="poubelle-label">Papier & Journaux</p>
+        </div>
 
-			<!--VERTE-->
-			<div class="poubelle poubelle-verte" data-bin="verte">
-				<div class="couvercle"></div>
-				<div class="corps"></div>
-				<p class="poubelle-label">Verre</p>
-			</div>
+        <!--JAUNE-->
+        <div class="poubelle poubelle-jaune" data-bin="jaune">
+            <div class="couvercle"></div>
+            <div class="corps"></div>
+            <p class="poubelle-label">Plastique, Métal & Carton recyclables</p>
+        </div>
 
-			<!--GRISE-->
-			<div class="poubelle poubelle-grise" data-bin="grise">
-				<div class="couvercle"></div>
-				<div class="corps"></div>
-				<p class="poubelle-label">Non recyclable</p>
-			</div>
+        <!--VERTE-->
+        <div class="poubelle poubelle-verte" data-bin="verte">
+            <div class="couvercle"></div>
+            <div class="corps"></div>
+            <p class="poubelle-label">Verre</p>
+        </div>
 
-			<!--BIODECHET-->
-			<div class="poubelle poubelle-biodechet" data-bin="biodechets">
-				<div class="couvercle"></div>
-				<div class="corps"></div>
-				<p class="poubelle-label">Biodéchets</p>
-			</div>
+        <!--GRISE-->
+        <div class="poubelle poubelle-grise" data-bin="grise">
+            <div class="couvercle"></div>
+            <div class="corps"></div>
+            <p class="poubelle-label">Non recyclable</p>
+        </div>
 
-			<!--DECHETERIE-->
-			<div class="poubelle poubelle-decheterie" data-bin="decheterie">
-				<div class="couvercle"></div>
-				<div class="corps"></div>
-				<p class="poubelle-label">Déchéterie</p>
-			</div>
-		</div>
-	</section>
+        <!--BIODECHET-->
+        <div class="poubelle poubelle-biodechet" data-bin="biodechets">
+            <div class="couvercle"></div>
+            <div class="corps"></div>
+            <p class="poubelle-label">Biodéchets</p>
+        </div>
 
-	<!--Section info des déchets-->
-	<section class="details-tri">
-		<div id="bins-details">
-		</div>
-	</section>
+        <!--DECHETERIE-->
+        <div class="poubelle poubelle-decheterie" data-bin="decheterie">
+            <div class="couvercle"></div>
+            <div class="corps"></div>
+            <p class="poubelle-label">Déchéterie</p>
+        </div>
+    </div>
+
+    <!-- DROITE : Les détails des déchets -->
+    <div class="details-tri">
+        <div id="bins-details">
+        </div>
+    </div>
+
+</section>
 
 	<script src="/static/js/infos.js"></script>
 </main>
