fix: Réinitialisation de l'affichage du score à chaque nouvelle partie

--- a/app/frontend/templates/jeu.html
+++ b/app/frontend/templates/jeu.html
@@ -26,7 +26,7 @@
 
 <div class="game-header">
     <span class="username" id="user-info">...</span>
-    <span id="score-display">0 pts</span>
+    <span id="score-display"></span>
     <a href="/profil" class="btn-profil">Mon profil</a>
 </div>
 
