💄| fix: Réorganisation et amélioration de la section profil pour une meilleure clarté et accessibilité

--- a/app/frontend/templates/profil.html
+++ b/app/frontend/templates/profil.html
@@ -25,48 +25,53 @@
 		<!--TIROIR 1-->
 		<h2>Bienvenue <span id="user-pseudo"></span> !</h2>
 
-		<!--TIROIR 2-->
-		<section class="infos-utilisateur">
-			<h2>Mes informations</h2>
-			<div class="info-card">
-				<p>Email : <span id="user-email"></span></p>
-				<p>Score total : <span id="user-score"></span></p>
-				<p>Date d'inscription : <span id="user-created-at"></span></p>
-			</div>
-		</section>
-
-		<!--TIROIR 3-->
-		<section class="statistiques">
-			<h2>Mes statistiques</h2>
-			<div class="stats-container">
-				<!--Carte 1 : Partie jouées-->
-				<div class="stat-card">
-					<div class="stat-icon">🎮</div>
-					<div class="stat-value" id="stats-games"></div>
-					<div class="stat-label">Parties jouées</div>
+		<div class="informations">
+			<!--TIROIR 2-->
+			<section class="infos-utilisateur">
+				<h3>Mes informations</h3><br>
+				<div class="info-card">
+					<p>Email : <span id="user-email"></span></p>
+					<p>Score total : <span id="user-score"></span></p>
+					<p>Date d'inscription : <span id="user-created-at"></span></p>
 				</div>
-				<!--Carte 2 : Meilleure score-->
-				<div class="stat-card">
-					<div class="stat-icon">🏆</div>
-					<div class="stat-value" id="stats-best">0</div>
-					<div class="stat-label">Meilleur score</div>
-				</div>
-				<!--Carte 3 : Déchets triés-->
-				<div class="stat-card">
-					<div class="stat-icon">✅</div>
-					<div class="stat-value" id="stats-correct">0</div>
-					<div class="stat-label">Déchets triés</div>
-				</div>
-			</div>
-		</section>
+			</section>
 
-		<!--TIROIR 4-->
-		<section class="badges">
-			<h2>Mes badges</h2>
-			<div id="badges-container">
+			<!--TIROIR 3-->
+			<section class="statistiques">
+				<h3>Mes statistiques</h3><br>
+				<div class="stats-container">
+					<!--Carte 1 : Partie jouées-->
+					<div class="stat-card">
+						<div class="stat-icon"></div>
+						<div class="stat-label">🎮 Parties jouées</div>
+						<div class="stat-value" id="stats-games"></div><br>
 
-			</div>
-		</section>
+					</div>
+					<!--Carte 2 : Meilleure score-->
+					<div class="stat-card">
+						<div class="stat-icon"></div>
+						<div class="stat-label">🏆 Meilleur score</div>
+						<div class="stat-value" id="stats-best"></div><br>
+
+					</div>
+					<!--Carte 3 : Déchets triés-->
+					<div class="stat-card">
+						<div class="stat-icon"></div>
+						<div class="stat-label">✅Déchets triés</div>
+						<div class="stat-value" id="stats-correct"></div>
+
+					</div>
+				</div>
+			</section>
+
+			<!--TIROIR 4-->
+			<section class="badges">
+				<h3>Mes badges</h3><br>
+				<div id="badges-container">
+
+				</div>
+			</section>
+		</div>
 	</div>
 
 	<script src="/static/js/auth_refresh.js"></script>
