--- a/app/frontend/static/css/profil.css
+++ b/app/frontend/static/css/profil.css
@@ -47,3 +47,44 @@
 .hero-text p {
     font-size: 1rem;
 }
+
+/* SECTION PROFIL */
+.profil-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profil-container h2,
+#user-pseudo {
+    color: #2c5f2d;
+    font-size: xx-large;
+    margin-top: 5rem;
+    margin-bottom: 6rem;
+}
+
+.infos-utilisateur,
+.statistiques,
+.badges {
+    margin-bottom: 2rem;
+    padding: 3rem;
+    background-color: #fff;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.informations {
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
+}
+
+.info-card {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.stat-value {
+    text-align: center;
+}
