--- a/app/frontend/templates/auth.html
+++ b/app/frontend/templates/auth.html
@@ -19,7 +19,7 @@
             <input type="email" id="email" name="email" placeholder="Email" required>
             <div class="password-wrapper">
                 <input type="password" id="password" placeholder="Mot de passe" required />
-                <span class="toggle-password" onclick="togglePasswordVisibility('register-password', this)">👁️</span>
+                <span class="toggle-password" onclick="togglePasswordVisibility('password', this)">👁️</span>
             </div>
             <button type="submit" class="btn-primary">Se connecter</button>
         </form>
